--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,12 +62,17 @@ jobs:
           { plan: true, project: "10_workspaces", tfvars: "" },
           { plan: true, project: "11_importing_state", tfvars: "" },
           { plan: true, project: "12_upgrading_providers", tfvars: "" },
-          { plan: true, project: "12_upgrading_terraform", tfvars: "" }, 
+          { plan: true, project: "12_upgrading_terraform/11.x", tfvars: "" }, 
+          { plan: true, project: "12_upgrading_terraform/12.x", tfvars: "" }, 
+          { plan: true, project: "12_upgrading_terraform/13.x", tfvars: "" }, 
+          { plan: true, project: "12_upgrading_terraform/14.x", tfvars: "" }, 
+          { plan: true, project: "12_upgrading_terraform/15.x", tfvars: "" }, 
+          { plan: true, project: "12_upgrading_terraform/1.2.x", tfvars: "" }, 
           { plan: true, project: "13_importing_data", tfvars: "" },      
           { plan: true, project: "15_importing_webservice", tfvars: "" },
-          { plan: true, project: "18_terraformer", tfvars: "" },    
-          { plan: true, project: "19_sops", tfvars: "" },
-          { plan: true, project: "20_cdk", tfvars: "" },
+          { plan: false, project: "18_terraformer", tfvars: "" },    
+          { plan: false, project: "19_sops", tfvars: "" },
+          { plan: false, project: "20_cdk", tfvars: "" },
           { plan: true, project: "21_importing_ssm", tfvars: "" },
           { plan: true, project: "22_drift_detection", tfvars: "" },
           { plan: true, project: "23_honeycomb", tfvars: "" },
