--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,6 +1,7 @@
 {
     "recommendations": [
         "github.vscode-github-actions",
-        "hashicorp.terraform"
+        "hashicorp.terraform",
+        "vivaxy.vscode-conventional-commits"
     ]
 }
