feat: :sparkles: Update state bucket configuration and add variable for state bucket name

--- a/45_gcp_basics/terraform.tfvars.template
+++ b/45_gcp_basics/terraform.tfvars.template
@@ -1,2 +1,3 @@
 project_id = "terraform-testing-xxxxx"
 credentials_file = "./terraform-sa.json"
+state_bucket_name = "terraform-testing-xxxxx-tf-state"
