feat: :sparkles: Add Firestore database configuration and deployment script with justfile integration

--- a/45_gcp_basics/justfile
+++ b/45_gcp_basics/justfile
@@ -38,6 +38,11 @@ apply stack:
   cd ./stacks/{{ stack }}
   terraform apply --var-file=../../terraform.tfvars 
 
+  if [[ -f ./hooks/justfile ]]; then
+    just -f ./hooks/justfile deployed
+  fi
+
+
 destroy stack:
   #!/usr/bin/env bash
   set -eufo pipefail
